DockerVersion/src/main/java/com/example/dockerversion/error/CourierUpdateException.java
package com.example.dockerversion.error;

public class CourierUpdateException extends RuntimeException{
    public CourierUpdateException() {
        super("Courier didn't update");
    }
}
